# sls-releases

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  PLAN.md  README.md  application.toml  build.gradle.kts  build.rs  docker-compose.yml  settings.gradle.kts  sls.toml
migrations/: 0001_create_releases.sql
src/: config.rs  lib.rs  main.rs
src/clients/github/: client.rs  mod.rs  parse.rs
src/domain/: job.rs  mod.rs  module.rs  release.rs
src/jobs/: jobs.rs  mod.rs  runner.rs  sync.rs
src/main/kotlin/ru/crystals/sls/releases/: Application.kt
src/main/kotlin/ru/crystals/sls/releases/client/: Converter.kt  GitHubClient.kt  GitHubRelease.kt
src/main/kotlin/ru/crystals/sls/releases/model/: Release.kt  Version.kt
src/main/kotlin/ru/crystals/sls/releases/plugins/: Parser.kt  Release.kt  Routing.kt  Version.kt
src/main/kotlin/ru/crystals/sls/releases/routes/: ReleasesRoute.kt  TransactionsRoute.kt
src/main/resources/: application.yaml
src/persistence/: migrations.rs  mod.rs  sqlite.rs
src/persistence/sqlite/: jobs.rs  mod.rs  releases.rs
src/routes/: mod.rs  modules.rs  releases.rs  render.rs  transactions.rs  web.rs
src/routes/dto/: jobs.rs  mod.rs  modules.rs  releases.rs  transactions.rs
tests/: parity_contract.rs  routes.rs  tests.rs  transactions_base62.rs
tests/jobs/: sync.rs
tests/logging/: mod.rs
tests/routes/: mod.rs  modules.rs  releases.rs  routes.rs  transactions.rs
web/: components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css
web/src/components/sl/: commands.tsx  header.tsx  version.tsx
web/src/components/ui/: header.tsx  version.tsx
web/src/lib/: api.ts  csv.test.ts  csv.ts  filter.ts  utils.ts
web/src/pages/: ModulePage.tsx  ReleasesPage.tsx
web/tests/lib/: api.test.ts
web/tests/pages/: ModulePage.test.tsx  ReleasesPage.test.tsx
(+9 files in other folders)
