[package]
name = "sls-releases"
version = "0.1.0"
edition = "2024"

[features]
# When enabled, embeds `web/dist` into the binary and serves the SPA at `/`.
embedded-web = []

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
config = "0.15"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
http = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
mime_guess = "2"
rust-embed = "8"
uuid7 = "1.7.0"

[dev-dependencies]
ctor = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wiremock = "0.6"
